[tool.poetry]
name = "atcoder-starter-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sortedcontainers = "2.4.0"
networkx = "3.0"
ac-library-python = {git = "https://github.com/not522/ac-library-python"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
